post-moon lord rogue spear weapons usage

--- a/server/plugins/Terraria/Data/armorSet.yml
+++ b/server/plugins/Terraria/Data/armorSet.yml
@@ -1355,7 +1355,7 @@ sets:
     - §a击中敌人会掉落红心，这个效果有5秒冷却时间
     - §a增加30%召唤伤害和3召唤栏
     - §a如果玩家在90%血量以上，增加15%召唤伤害
-    - §a在50%生命及以下获得40点防御和4点生命恢复
+    - §a在50%生命及以下获得30点防御
     attributes:
       regen: 6
       damageSummonMulti: 0.3
@@ -1536,7 +1536,7 @@ sets:
     - §a+6 生命恢复
     - §a击中敌人会掉落红心，这个效果有5秒冷却时间
     - §a如果玩家在90%血量以上，增加15%召唤伤害
-    - §a在50%生命及以下获得40点防御和4点生命恢复
+    - §a在50%生命及以下获得30点防御
     - §b-> §a继承自始源林海套装的效果：
     - §a对敌人造成伤害时生成林海光球治疗你
     - §a即将受到致命伤害时进入8秒始源林海无敌状态
