--- a/server/plugins/Terraria/Data/items.yml
+++ b/server/plugins/Terraria/Data/items.yml
@@ -9561,8 +9561,7 @@ Dodu的手炮:
 渎神投矛:
   item: DIAMOND_SWORD
   lore:
-  - §r发射一支不洁之矛
-  - §r潜伏攻击会在飞行轨迹上生成小的长矛克隆体
+  - §r发射一支会爆炸的不洁之矛
   attributes:
     damage: 644
     damageStealth: 800
@@ -9575,8 +9574,8 @@ Dodu的手炮:
 裂世投矛:
   item: DIAMOND_SWORD
   lore:
-  - §r在投掷一支穿透矛与三支小型跟踪矛的攻击方式间循环
-  - §r潜伏攻击会投掷一发割裂现实的高速投矛
+  - §r普通攻击投掷三支小型跟踪矛
+  - §r潜伏攻击会投掷一发割裂现实的高速投矛贯穿你的敌人
   attributes:
     damage: 450
     damageStealth: 750
@@ -9589,7 +9588,7 @@ Dodu的手炮:
 暗夜凝视:
   item: DIAMOND_SWORD
   lore:
-  - §r用这支夜之长矛贯穿你的敌人
+  - §r用这支夜之长矛痛击你的敌人
   - §r潜伏攻击命中敌人会召唤追踪的星辰
   attributes:
     damage: 1062
@@ -9631,7 +9630,7 @@ Dodu的手炮:
 微元劫裂者:
   item: DIAMOND_SWORD
   lore:
-  - §r投掷出处于量子叠加态的标枪，击中后会同时从复数时间线对目标进行攻击
+  - §r投掷出处于量子叠加态的标枪，击中后会从其他时间线对目标再次发动攻击
   - §r潜伏攻击会召唤更多彩虹标枪
   attributes:
     damage: 640
@@ -9645,8 +9644,7 @@ Dodu的手炮:
 绯红恶魔:
   item: DIAMOND_SWORD
   lore:
-  - §r扔出一把必中的神枪，在飞行路径上生成追踪弹幕
-  - §r神枪在击中敌人时会产生斯卡雷特爆炸
+  - §r普通攻击扔出一把神枪，在击中敌人时会产生斯卡雷特爆炸
   - §r潜伏攻击会使神枪获得生命汲取并且会在击中敌人时爆成一片追踪弹幕
   - §r“神枪「冈格尼尔」”
   attributes:
